Add column withApprovalRight
