# resource/openapi/api-spec.yaml
@@ -422,6 +422,7 @@ components:
         - name
         - role
         - status
+        - withApprovalRight
         - entitledStudentId
       properties:
         email:
@@ -439,6 +440,9 @@ components:
           items:
             type: string
           description: Id of students
+        withApprovalRight:
+          type: boolean
+          description: Has approval right or not.  Applicable to Teacher only
     UserRegistration:
       type: object
       required:
